--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,30 @@
 <head>
 	<title>Ejemplo básico</title>
 	<meta charset="UTF-8" />
+	<link rel="stylesheet" href="stilos.css">
 </head>
 
 <body>
-	<h1>La aplicación esta corriendo!</h1>
+
+	<h1 id="titulo1">TAREAS POR HACER</h1>
+
+	<form action="">
+		<input id="barra" type="text" placeholder="INGRESAR TAREA">
+		<br> <br>
+		<button id="btnStyle">Agregar</button>
+	</form>
+
+	<div id="circuloContador">0</div>
+	<p id="tarea">Tareas <br> completadas</p>
+
+	<div class="contenedorTop">
+		
+
+
+	</div>
+
+
+
 
 	<script src="./index.js" type="module"></script>
 </body>
