funcion que hace que muestre texto

--- a/src/index.html
+++ b/src/index.html
@@ -11,18 +11,17 @@
 
 	<h1 id="titulo1">TAREAS POR HACER</h1>
 
-	<form action="">
+
 		<input id="barra" type="text" placeholder="INGRESAR TAREA">
 		<br> <br>
 		<button id="btnStyle">Agregar</button>
-	</form>
+
 
 	<div id="circuloContador">0</div>
 	<p id="tarea">Tareas <br> completadas</p>
 
-	<div class="contenedorTop">
-		
-
+	<div class="contenedorAbajo">
+		<div id="container"></div>
 
 	</div>
 
